util/llf/LogTableVisualization: Fix Java9+ deprecation for new Double.